[metadata]
name=obnl

copyright=2017, %(maintainer)s

major=0
minor=2
micro=5b1
version=%(major)s.%(minor)s.%(micro)s

maintainer=The OBNL Team
maintainer_email=gillian.basso@hevs.ch

url=https://github.com/ppuertocrem/obnl

summary=An "OpenBuildNet Like" co-simulator

description_file=README.md

licence=GPLv3+

keywords=co-simulation,AMQP,MQTT

required=pika,protobuf

classifiers=Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Energy Simulation

[build_sphinx]
source-dir=doc/source
build-dir=doc/build